--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,23 @@
     transform: rotate(360deg);
   }
 }
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.footcontent {
+  margin-top: 200px;
+  background-color: rgb(28, 5, 5);
+  color: white;
+  text-align: center;
+  padding: 20px;
+}
