--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,54 @@ body {
   text-align: center;
   padding: 20px;
 }
+.addtodo{
+  color:rgb(20, 134, 20) ;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.list{
+  color: darkblue;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 30px;
+}
+
+
+/* Styling for the bold title */
+.title {
+  font-weight: bold;
+}
+
+/* header css */
+/* Styling for the underline effect under the Home and About links */
+.nav-link {
+  position: relative;
+  padding-bottom: 5px;
+  text-decoration: none; /* Remove default underline */
+  color: black;
+}
+
+.nav-link::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background-color: black; /* Underline color */
+  transform: scaleX(0); /* Initially hide the underline */
+  transition: transform 0.3s ease-in-out; /* Smooth transition for hover */
+}
+
+.nav-link:hover::after {
+  transform: scaleX(1); /* Show the underline on hover */
+}
+.loginHeader {
+  margin-left: auto;
+  padding: 8px 16px;
+  background-color: #007bff; /* Example background */
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+
